Fixed a bug, created a somewhat darker, arguably uglier, theme and changed the way we do cursor's left and right jumps.

--- a/themes/3.24.43/light/style-3.24.43.css
+++ b/themes/3.24.43/light/style-3.24.43.css
@@ -1,7 +1,13 @@
 .text-view, .search-entry {
+	font-family: Sudo;
+	/*
 	font-family: ComicShannsMono Nerd Font Mono;
-	/*font-size: 14.5px;*/
-	font-size: 16.5px;
+	*/
+	font-size: 19px;
+	/*
+	font-size: 11.5px;
+	font-size: 14.5px;
+	*/
 	/*font-weight: Regular;*/
 }
 
